adding a new gcp based build

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -1,4 +1,4 @@
-name: Python application test with Github Actions
+name: GCP  Python 3.9 application test with Github Actions
 on: [push]
 jobs:
   build:
@@ -11,7 +11,7 @@ jobs:
         python-version: 3.9
     - name: Install dependencies
       run:
-        make install
+        make install-gcp
     - name: Lint
       run:
         make lint
