--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -11,7 +11,7 @@ jobs:
         python-version: 3.7
     - name: Install dependencies
       run:
-        make install
+        make install-aws
     - name: Lint
       run:
         make lint
