--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,4 +1,4 @@
-name: AWS Python 3.7 application test with Github Actions
+name: Python 3.7 application test with Github Actions
 on: [push]
 jobs:
   build:
