--- a/.github/workflows/python37.yml
+++ b/.github/workflows/python37.yml
@@ -1,4 +1,4 @@
-name: Python 3.7 application test with Github Actions
+name: Python 3.7 application test with Github Actions (for AWS)
 on: [push]
 jobs:
   build:
