Update and rename gcp.yml to python39.yml

--- a/.github/workflows/python39.yml
+++ b/.github/workflows/python39.yml
@@ -1,4 +1,4 @@
-name: GCP  Python 3.9 application test with Github Actions
+name: Python 3.9 application test with Github Actions (for GCP)
 on: [push]
 jobs:
   build:
